# SDBR

./: .gitignore  AGENTS.md  pyproject.toml  runme.md
docs/: DDOM的一些建议指标.md  SDBR-development-handoff-2026-07-16.md  SDBR-development-handoff-latest.md  Scenario Run Workspace（场景运行工作台）.md  aps-cp-sat-business-guide.md  backend-readiness-2026-06-19.md  backend-specification.md  cp-sat-business-case-acceptance.md  ddom-ddmrp-runtime-principles.md  mto-order-commitment-task28-evidence-2026-07-12.md  simio-generation-record.md  ui-closure-audit-2026-06-19.md  ui-specification.md  合批和分批的一些原则.md  用 Simio 会更像做仿真项目还是直接做.md
interface/: interface.md
model/: SDBR_Example.backup  SDBR_Example.spfx
scripts/: seed_mto_order_commitment_browser.ps1
sdbr/: __init__.py  administration_view.py  adventureworks_product_demo_profile.py  adventureworks_scheduling_adapter.py  api.py  api_payload.py  base_calendar.py  buffer_execution_view.py  calendar_import.py  calendar_overrides.py  calendar_preview.py  ccr_shadow_scheduler.py  cp_sat_solver.py  data_readiness.py  ddmrp.py  ddmrp_replenishment.py  ddmrp_replenishment_view.py  ddom_operational_metrics.py  ddsop_contracts.py  ddsop_delivery.py  ddsop_runtime_planning_input.py  dispatch_priority.py  environment_paths.py  exception_center_view.py  execution_object_evidence_contracts.py  gantt_view.py  integration_contracts.py  inventory_import.py  light_mrp.py  master_data_validation.py  material_state.py  operational_state.py  order_commitment_evaluation.py  order_commitment_view.py  order_import.py  plan_publication.py  planner_view.py  (+33 more)
(+119 files in other folders)
