[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sdbr"
version = "0.1.0"
description = "Demand-driven DBR scheduling and execution toolkit."
requires-python = ">=3.11"

[project.optional-dependencies]
api = [
    "fastapi>=0.115",
    "httpx>=0.28",
    "uvicorn>=0.30",
]

[project.scripts]
sdbr-planning-worker = "sdbr.planning_worker:main"
sdbr-reset-test-data = "sdbr.test_data:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sdbr*"]

[tool.setuptools.package-data]
sdbr = ["web/*.html", "web/*.css", "web/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
